[package]
name = "cfmms"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "CFMM lib built in Rust enabling pair syncing and swap simulation with pools on Ethereum."
readme = "README.md"
homepage = "https://github.com/0xKitsune/cfmms-rs"
repository = "https://github.com/0xKitsune/cfmms-rs"
keywords = ["ethereum", "mev", "dex", "cffms"]


[dependencies]
ethers = { git = "https://github.com/hexiaoyuan/ethers-rs", default-features = false, features = ["abigen", "ipc", "ws", "openssl"], branch = "v2.0-pt01" }
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
indicatif = "0.17.4"
thiserror = "1.0.40"
async-trait = "0.1.68"
serde_json = "1.0.96"
serde = "1.0.164"
num-bigfloat = "1.6.2"
regex = "1.8.4"
uniswap_v3_math = { git = "https://github.com/hexiaoyuan/uniswap_v3_math", branch = "main-pt01" }
